--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,20 +15,29 @@ cassandra.read.consistency.level=ONE
 
 # metrics - datadog
 
-#metrics.host=${DRP_CF_KUBERNETES_MINION_NAME:localhost}
-#metrics.port=8125
-#metrics.serviceName=ordering
-#metrics.vertical=pemp
-#metrics.stage=local
+metrics.host=${DRP_CF_KUBERNETES_MINION_NAME:localhost}
+metrics.port=8125
+metrics.serviceName=iot
+metrics.vertical=pemp
+metrics.stage=local
 
 #Hamhamham1
 
-#management.metrics.export.datadog.api-key = 
+management.metrics.export.datadog.api-key = fd325df7c5e018573a244417c7092a5c
 #management.metrics.export.datadog.application-key = 
 
 
 # You will probably want disable Datadog publishing in a local development profile.
-#management.metrics.export.datadog.enabled = true
+management.metrics.export.datadog.enabled = true
 # The interval at which metrics are sent to Datadog. The default is 1 minute.
-#management.metrics.export.datadog.step = 1m
-#management.metrics.use-global-registry=true
+#management.metrics.export.datadog.step = 1
+management.metrics.use-global-registry=true
+
+
+management.metrics.export.statsd.publish-unchanged-meters=true
+management.metrics.export.statsd.enabled=true
+management.metrics.export.statsd.flavor=datadog
+management.metrics.export.statsd.host=35.205.88.97
+management.metrics.export.statsd.port=8125
+
+spring.autoconfigure.exclude=org.springframework.boot.actuate.autoconfigure.MetricsDropwizardAutoConfiguration
